# QuantBot

./: .env.example  .gitignore  README.md  TODO.md  financial_repord.md  news_data_AAPL.json  news_data_CSCO.json  news_data_NVDA.json  pyproject.toml  report.md  run.py  tickers.json
scripts/: com.quantbot.daily.plist  compare_model_cost.py  daily_pipeline.py  daily_pipeline.sh  evaluation_predictions.py  install_schedule.sh  stock_report.csv  test_returns.py  tickers_input.csv
src/sp_stock_agent/: crew.py  decision_table_writer.py  evaluation_metadata.py  llms.py  main.py  market_calendar.py  usage_tracker.py
src/sp_stock_agent/config/: agents.yaml  model_pricing.json  tasks.yaml
src/sp_stock_agent/db/: Manual_Stock_Data_Inserts.csv  manual_insert.py  models.py  populate.py  read_db.py  session.py  stock_data.db
src/sp_stock_agent/tools/: __init__.py  alpha_vantage_api_tool.py  av_earnings_transcript_api_tool.py  av_news_api_tool.py  chunked_10k.py  cik.json  news.py  news_data.json  news_scraper_tool.py  news_scraper_tool_alternate.py  news_summaries.txt  rag_enhanced_sec10k_tool.py  sec_10k_tool.py  serp_news_scraper.py  stock_selector.py  web_scraper_tool.py
tests/: README.md  __init__.py  conftest.py  test_alpha_vantage_api_tool.py  test_alphavantage_tools.py  test_basic.py  test_llm_table_integration.py  test_sec_10k_tool_accuracy.py  test_sec_parsing.py
